# note-board

./: .eslintignore  .eslintrc  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  auto-import.d.ts  components.d.ts
src-tauri/core/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/core/src/: main.rs  traits.rs  wits.rs
src-tauri/core/src/ipc/: app.rs  builder.rs  mod.rs  traits.rs
src-tauri/core/wits/: app.wit
src/components/: GreetComp.vue
src/wits/: app.ts
