[package]
name = "note-board"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-bindgen-gen-guest-ts = { path = "../../pkg/tauri-bindgen/crates/gen-guest-ts" }
tauri-bindgen-gen-host = { path = "../../pkg/tauri-bindgen/crates/gen-host" }
tauri-bindgen-core = { path = "../../pkg/tauri-bindgen/crates/core" }
tauri-build = { version = "1.4", features = [] }
wit-parser = { path = "../../pkg/tauri-bindgen/crates/wit-parser" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = ["shell-open"] }
tauri-bindgen-host = { path = "../../pkg/tauri-bindgen/crates/host" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

